*Empty MediaWiki Message*

--- a/Sivalibadi_na_Jani_Mayeni.mw
+++ b/Sivalibadi_na_Jani_Mayeni.mw
@@ -1,4 +1,4 @@
-[[File:Map Norway political-geo.png|thumb|250px|<font color="grey">Sivalibadi na Jani Mayeni</font>]]
+[[File:Map Norway political-geo.png|thumb|250px|<font color="grey">Ikarita ya Sivalibadi na Jani Mayeni</font>]]
 
 '''Sivalibadi na Jani Mayeni''' (izina mu [[kinyanoruveji]] : ''Svalbard og Jan Mayen'' ) n’[[igihugu]] mu [[Burayi]].
 
