*Empty MediaWiki Message*

--- a/Tanzaniya.mw
+++ b/Tanzaniya.mw
@@ -1,28 +1,15 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Jamhuri ya Muungano wa Tanzania'''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[File:Flag of Tanzania.svg|125px]]
-| align="center" width="140px" | [[File:Coat of arms of Tanzania.svg|125px]]
-|-
-| align="center" width="140px" | 
-| align="center" width="140px" | 
-|}
-|-
-| align="center" colspan=2 | <small>''[[National motto]]: Uhuru na Umoja''</big>
-|-
-| align=center colspan=2 | [[File:LocationTanzania.svg|300px]]
-|}
+[[File:Flag of Tanzania.svg|thumb|250px|<font color="grey">Ibendera rya Tanzaniya</font>]]
+[[File:LocationTanzania.svg|thumb|250px|<font color="grey">Ikarita ya Tanzaniya</font>]]
 
-Tanzaniya ni igihugu muri [[Afurika]] y'iburasirazuba. Indimi nkuru za Tanzaniya ni [[igiswahiri]] n'[[icyongereza]].
+'''Tanzaniya''' (izina mu [[giswayili]] : ''Jamhuri ya Muungano wa Tanzania'' ; izina mu [[cyongereza]] : ''United Republic of Tanzania'' ) n’[[igihugu]] muri [[Afurika]] y'iburasirazuba. Indimi nkuru za Tanzaniya ni [[igiswahiri]] n'[[icyongereza]].
+  
 
 == ==
 *[[Abaperezida ba Tanzaniya]]
 
 [[Category:Afurika]]
 [[Category:Tanzaniya| ]]
+[[Category:Ibihugu]]
 
 [[ace:Tanzania]]
 [[af:Tanzanië]]
