*Empty MediaWiki Message*

--- a/Ubudage.mw
+++ b/Ubudage.mw
@@ -1,15 +1,8 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''UbuDage'''</big></big><br />''Bundesrepublik Deutschland''
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[File:Flag of Germany.svg|100px|Bendera ry'ubuDage]]
-| align="center" width="140px" | [[File:Coat of Arms of Germany.svg|right|100px]]
-|}
-|-
-| align=center colspan=2 | 
-|}
+[[File:Flag of Germany.svg|thumb|250px|<font color="grey">Ibendera ry’Ubudage</font>]]
+[[File:EU-Germany.svg|thumb|250px|<font color="grey">Ikarita y’Ubudage</font>]]
+
+'''Ubudage''' (izina mu [[gidage]] : ''Deutschland'' cyangwa ''Bundesrepublik Deutschland'' ) n’[[igihugu]] mu [[Burayi]].
+
 Igihugu cyo mu [[Uburayi|Burayi]] bw’iburengerazuba.
 
 
