*Empty MediaWiki Message*

--- a/Ubufaransa.mw
+++ b/Ubufaransa.mw
@@ -1,9 +1,7 @@
-[[File:Location France EU Europe.png|thumb|Ubufaransa]]
-[[File:Flag of France.svg|right|thumb|80px]]
+[[File:Flag of France.svg|thumb|250px|<font color="grey">Ibendera ry’Ubufaransa</font>]]
+[[File:EU-France.svg|thumb|250px|<font color="grey">Ikarita y’Ubufaransa</font>]]
 
-'''UbuFaransa''' n’igihugu muri [[Uburayi]].
-
-
+'''Ubufaransa''' (izina mu [[gifaransa]] : ''France'' cyangwa ''République française'' ) n’[[igihugu]] mu [[Burayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
