--- a/Ubuhinde.mw
+++ b/Ubuhinde.mw
@@ -1,7 +1,7 @@
-[[File:Flag of India.svg|thumb|250px|<font color="grey">Ibendera </font>]]
-[[File:India (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita </font>]]
+[[File:Flag of India.svg|thumb|250px|<font color="grey">Ibendera ry’Ubuhinde</font>]]
+[[File:India (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita y’Ubuhinde</font>]]
 
-'''Ubuhinde''' (izina mu [[igihindi]]: भारत गणराज्य )
+'''Ubuhinde''' (izina mu [[igihindi]]: भारत गणराज्य ) n’[[igihugu]] muri [[Aziya]].
 
 == ==
 
