*Empty MediaWiki Message*

--- a/Ubushinwa.mw
+++ b/Ubushinwa.mw
@@ -1,11 +1,11 @@
-[[File:LocationPRChina.png|thumbnail|Ubushinwa]]
-[[File:Flag of the People's Republic of China.svg|thumbnail|Flag Ubushinwa]]
-'''Ubushinwa'''
+[[File:Flag of the People's Republic of China.svg|thumb|250px|<font color="grey">Ibendera ry’Ubushinwa</font>]]
+[[File:People's Republic of China (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita y’Ubushinwa</font>]]
 
-== Other Websites ==
-* [http://www.china-map-guide.com/ China Map]
+'''Ubushinwa''' (izina mu [[gishinwa]] : '''中华人民共和国''' ) n’[[igihugu]] muri [[Aziya]].
 
-[[Category:Azia]]
+[[Category:Aziya]]
+[[Category:Ibihugu]]
+
 
 [[ab:Ачынҭатәи Ажәлартә Республика]]
 [[ace:Rèpublik Rakyat Cina]]
