*Empty MediaWiki Message*

--- a/Ububiligi.mw
+++ b/Ububiligi.mw
@@ -2,7 +2,7 @@
 [[File:LocationBelgium.png|thumb|250px|<font color="grey">Ikarita ya Ububiligi</font>]]
 
 
-'''Ububiligi''' cyangwa Ububirigi , '''Igihugu cy’Ububirigi''' (izina mu [[kinyaholande]] : ''Koninkrijk België'' ; izina mu [[gifaransa]] : ''Royaume de Belgique'' ; izina mu [[gidage]] : ''Königreich Belgien'' ) n’[[igihugu]] mu [[Burayi]].
+'''Ububiligi''' cyangwa '''Ububirigi''' , '''Igihugu cy’Ububirigi''' (izina mu [[kinyaholande]] : ''Koninkrijk België'' ; izina mu [[gifaransa]] : ''Royaume de Belgique'' ; izina mu [[gidage]] : ''Königreich Belgien'' ) n’[[igihugu]] mu [[Burayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
