*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -692,6 +692,9 @@ Urutonde rw’ibihugu ISO 3166-1
 | [[Ubufaransa]]
 | [[ISO 3166-1 alpha-2#FR|<tt>FR</tt>]] || <tt>FRA</tt> || <tt>250</tt> || [[ISO 3166-2:FR]]
 |-
+| [[Ubugande]] cyangwa '''Yuganda'''
+| [[ISO 3166-1 alpha-2#UG|<tt>UG</tt>]] || <tt>UGA</tt> || <tt>800</tt> || [[ISO 3166-2:UG]]
+|-
 | [[Ubugereki]]
 | [[ISO 3166-1 alpha-2#GR|<tt>GR</tt>]] || <tt>GRC</tt> || <tt>300</tt> || [[ISO 3166-2:GR]]
 |-
@@ -745,9 +748,6 @@ Urutonde rw’ibihugu ISO 3166-1
 |-
 | [[Yorudani]]
 | [[ISO 3166-1 alpha-2#JO|<tt>JO</tt>]] || <tt>JOR</tt> || <tt>400</tt> || [[ISO 3166-2:JO]]
-|-
-| [[Yuganda]]
-| [[ISO 3166-1 alpha-2#UG|<tt>UG</tt>]] || <tt>UGA</tt> || <tt>800</tt> || [[ISO 3166-2:UG]]
 |-
 | [[Zambiya]]
 | [[ISO 3166-1 alpha-2#ZM|<tt>ZM</tt>]] || <tt>ZMB</tt> || <tt>894</tt> || [[ISO 3166-2:ZM]]
