*Empty MediaWiki Message*

--- a/Ubwongereza.mw
+++ b/Ubwongereza.mw
@@ -1,7 +1,8 @@
-[[File:Location UK EU Europe.png|thumb|UbwOngereza]]
-[[File:Flag of UK.svg|right|thumb|150px|Bendera ry'ubwOngereza]]
+[[File:Flag of the United Kingdom.svg|thumb|250px|<font color="grey">Ibendera ry’Ubwongereza</font>]]
+[[File:EU-United Kingdom.svg|thumb|250px|<font color="grey">Ikarita y’Ubwongereza</font>]]
 
-'''UbwOngereza''' n’igihugu muri [[Uburayi]].
+'''Ubwongereza''' (izina mu [[cyongereza]] : ''United Kingdom'' cyangwa ''United Kingdom of Great Britain and Northern Ireland'' ) n’[[igihugu]] mu [[Burayi]].
+
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
