*Empty MediaWiki Message*

--- a/Ubugande.mw
+++ b/Ubugande.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Uganda.svg|thumb|250px|<font color="grey">Ibendera ry’Ubugande</font>]]
 [[File:LocationUganda.svg|thumb|250px|<font color="grey">Ikarita y’Ubugande</font>]]
 
-'''Ubugande''' cyangwa '''Yuganda''' , '''Repubulika y’Ubugande''' (izina mu [[cyongereza]] : ''Republic of Uganda'' ; izina mu [[giswayili]] : ''Jamhuri ya Uganda'' ; izina mu [[kiganda]] : '''Yuganda''' ) n’[[igihugu]] muri [[Afurika]].
+'''Ubugande''' cyangwa '''Yuganda''' , '''Repubulika y’Ubugande''' (izina mu [[cyongereza]] : ''Republic of Uganda'' ; izina mu [[giswayili]] : ''Jamhuri ya Uganda'' ; izina mu [[kiganda]] : ''Yuganda'' ) n’[[igihugu]] muri [[Afurika]].
 
 [[Category:Afurika]]
 [[Category:Ibihugu]]
