--- a/Rwanda.mw
+++ b/Rwanda.mw
@@ -2,10 +2,10 @@
 [[File:Coat of arms of Rwanda.svg|thumb|250px|<font color="grey"></font>]]
 [[File:LocationRwanda.svg|thumb|250px|<font color="grey">Ikarita ya Repubulika y’u Rwanda </font>]]
 
-'''Rwanda''' cyangwa '''Repubulika y’u Rwanda'''
+'''U Rwanda''' cyangwa '''Repubulika y’u Rwanda'''
 
 
-U [[Rwanda]] ni [[igihugu]] giherereye muri [[Afurika]] yo hagati mu karere k’ibiyaga bigari, munsi y’Umurongo wa [[Koma y’isi]]. Umurwa mukuru w’u Rwanda witwa [[Kigali]]. Ni gihugu kiza cyane cy’imisozi igihumbi, kikaba gikoresha indimi eshatu: I[[kinyarwanda]], I[[gifaransa]], I[[cyongereza]].
+U Rwanda ni [[igihugu]] giherereye muri [[Afurika]] yo hagati mu karere k’ibiyaga bigari, munsi y’Umurongo wa [[Koma y’isi]]. Umurwa mukuru w’u Rwanda witwa [[Kigali]]. Ni gihugu kiza cyane cy’imisozi igihumbi, kikaba gikoresha indimi eshatu: I[[kinyarwanda]], I[[gifaransa]], I[[cyongereza]].
 
 == "Geography" ==
 
