--- a/Kaminuza_nkuru_y’u_Rwanda.mw
+++ b/Kaminuza_nkuru_y’u_Rwanda.mw
@@ -16,6 +16,9 @@
 
 <!--aya makuru ashobora kuvugururwa-->
 
+[[Category:Uburezi]] 
+[[Category:Rwanda]] 
+
 [[fr:Université nationale du Rwanda]]
 [[ja:ルワンダ国立大学]]
 [[fi:Ruandan kansallinen yliopisto]]
