*Empty MediaWiki Message*

--- a/Esipanye.mw
+++ b/Esipanye.mw
@@ -1,6 +1,7 @@
-[[File:Flag of Spain.svg|right|200px]]
-[[File:Location Spain EU Europe.png|right|200px]]
-'''Esipanye''' n’igihugu muri [[Uburayi]]. Umurwa mukuru w’u Esipanye witwa [[Madrid]].
+[[File:Flag of Spain.svg|thumb|250px|<font color="grey">Ibendera rya Esipanye</font>]]
+[[File:Location Spain EU Europe.png|thumb|250px|<font color="grey">Ikarita ya Esipanye</font>]]
+
+'''Esipanye''' cyangwa '''Hisipaniya''' (izina mu [[cyesipanyole]] : ''España'' cyangwa ''Reino de España'' ) n’[[igihugu]] muri [[Aziya]]. Umurwa mukuru w’u Esipanye witwa [[Madrid]].
 
 {{Commons|Spain}}
 
