*Empty MediaWiki Message*

--- a/Esitoniya.mw
+++ b/Esitoniya.mw
@@ -1,7 +1,7 @@
-[[File:EU-Estonia.svg|thumb|Esitoniya]]
-[[File:Flag of Estonia.svg|right|thumb|150px|Esitoniya]]
+[[File:Flag of Estonia.svg|thumb|250px|<font color="grey">Ibendera rya Esitoniya</font>]]
+[[File:EU-Estonia.svg|thumb|250px|<font color="grey">Ikarita ya Esitoniya</font>]]
 
-'''Esitoniya''' n’igihugu muri [[Uburayi]].
+'''Esitoniya''' (izina mu [[cyesitoniya]] : ''Eesti'' cyangwa ''Eesti Vabariik'') n’[[igihugu]] mu [[Burayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
