*Empty MediaWiki Message*

--- a/Miryango.mw
+++ b/Miryango.mw
@@ -1,6 +1,8 @@
 [[File:US-hoosier-family.jpg|thumb|Miryango]]
 '''Miryango'''
 
+Umuryango wawe ni abantu mufitanye isano rya hafi. uwo mwashakanye, abana bawe, ababyeyi bawe n'abo muvukana. Abandi bantu mufitanye isano ku ruhande rw'ababyeyi bombi nabo bashobora kubarirwa mu muryango.
+
 * [[Data]]
 * [[Mama]]
 
