*Empty MediaWiki Message*

--- a/Icyesipanyole.mw
+++ b/Icyesipanyole.mw
@@ -2,7 +2,7 @@
 
 '''Icyesipanyole''' cyangwa '''Igisipanyoli''' (izina mu cyesipanyole  : ''español''  cyangwa ''castellano'' ) ni [[ururimi]] rwa [[Esipanye]], [[Arijantine]], [[Boliviya]], [[Ekwadoro]], [[Gwatemala]], [[Hondurasi]], [[Irigwe]], [[Kiba]], [[Kolombiya]], [[Kosita Rika]], [[Megizike]], ...
 
-[[Category:Icyesipanyole]]
+[[Category:Icyesipanyole| ]]
 
 [[ace:Bahsa Seupanyo]]
 [[af:Spaans]]
