*Empty MediaWiki Message*

--- a/Igiporutigali.mw
+++ b/Igiporutigali.mw
@@ -1,6 +1,6 @@
 [[File:Map-Lusophone World-en.png|thumb|250px|<font color="grey">Ikarita y’Igiporutigali</font>]]
 
-'''Igiporutigali''' (izina mu giporutigali : ''Português''  cyangwa ''língua portuguesa'' ) ni [[ururimi]] rwa [[Mozambike]], [[Burezile]], [[Angola]], [[Gineya-Biso]], [[Gineya Ekwatoriyale]], [[Kapu Veri]], [[Mozambike]], [[Sawo Tome na Purensipe], [[Timoro-Lesite]] na  [[Makawo]].
+'''Igiporutigali''' (izina mu giporutigali : ''Português''  cyangwa ''língua portuguesa'' ) ni [[ururimi]] rwa [[Mozambike]], [[Burezile]], [[Angola]], [[Gineya-Biso]], [[Gineya Ekwatoriyale]], [[Kapu Veri]], [[Mozambike]], [[Sawo Tome na Purensipe]], [[Timoro-Lesite]] na  [[Makawo]].
 
 [[Category:Igiporutigali]]
 
