--- a/Ikinyafurikansi.mw
+++ b/Ikinyafurikansi.mw
@@ -1,6 +1,6 @@
 [[File:Afrikaans ETN15 Spread.svg|thumb|250px|<font color="grey">Ikarita y’Ikinyafurikansi</font>]]
 
-'''Ikinyafurikansi''' cyangwa '''Icyafurikanzi''' (izina mu kinyafurikansi : ''Afrikaans''  cyangwa ''língua portuguesa'' ) ni [[ururimi]] rwa [[Afurika y’Epfo]], [[Namibiya]], [[Botswana]], [[Lesoto]], [[Swazilande]], [[Zambiya]], [[Zimbabwe]] na [[Malawi]].
+'''Ikinyafurikansi''' cyangwa '''Icyafurikanzi''' (izina mu kinyafurikansi : ''Afrikaans''  ) ni [[ururimi]] rwa [[Afurika y’Epfo]], [[Namibiya]], [[Botswana]], [[Lesoto]], [[Swazilande]], [[Zambiya]], [[Zimbabwe]] na [[Malawi]].
 
 [[Category:Indimi z’igihinde-buraya]]
 
