--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -27,10 +27,10 @@
 * [[Ikirundi]] 
 
 == Ikinya- ==
-* Ikinyafurikansi
-* Ikinyankore
-* Ikinyarwanda
-* Ikinyaturukiya → Igiturukiya
+* [[Ikinyafurikansi]]
+* [[Ikinyankore]]
+* [[Ikinyarwanda]]
+* [[Ikinyaturukiya]] → Igiturukiya
 
 [[Category:Indimi]]
-[[Category:Ikinyarwanda]]
+[[Category:Kinyarwanda]]
