--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -2,7 +2,10 @@
 
 == Icy- ==
 * [[Icyafurikanzi]] → Ikinyafurikansi
+* [[Icyarabu]]
 * [[Icyesipanyole]]
+* [[Icyesiperanto]]
+* [[Icyesitoniya]]
 * [[Icyongereza]]
 
 == Igi- ==
