--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -10,12 +10,29 @@
 
 == Igi- ==
 * [[Igiceceni]]
+* [[Igiceke]]
 * [[Igifaransa]]
 * [[Igifero]]
+* [[Igifilipino]]
+* [[Igifinuwa]]
+* [[Igiheburayo]]
+* [[Igihinde]]
+* [[Igiholandi]]
+* [[Igihongiriya]]
+* [[Igikatala]]
+* [[Igikoreya]]
+* [[Igikorowasiya]]
 * [[Igikuyu]]
+* [[Igiperisi]]
+* [[Igipolone]]
 * [[Igiporutigali]]
+* [[Igiseribe]]
+* [[Igisilovaki]]
 * [[Igisipanyoli]] → Icyesipanyole
+* [[Igisuweduwa]]
 * [[Igiswahili]]
+* [[Igitaliyani]]
+* [[Igitayi]]
 * [[Igituruki]] → Igiturukiya
 * [[Igiturukimeni]]
 * [[Igiturukiya]]
