--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -38,13 +38,21 @@
 * [[Igiturukiya]]
 
 == Iki- ==
+* [[Ikibelarusiya]]
+* [[Ikidaninwa]]
 * [[Ikidage]]
 * [[Ikigereki]]
 * [[Ikilatini]]
+* [[Ikilativiyani]]
 * [[Ikilazi]]
 * [[Ikiluba]]
+* [[Ikilituwaniya]]
 * [[Ikimokisha]]
-* [[Ikirundi]] 
+* [[Ikinoruveji]]
+* [[Ikiromaniya]]
+* [[Ikirundi]]
+* [[Ikirusiya]]
+* [[Ikiyapani]]
 
 == Ikinya- ==
 * [[Ikinyafurikansi]]
