--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -54,11 +54,17 @@
 * [[Ikirusiya]]
 * [[Ikiyapani]]
 
-== Ikinya- ==
+== Ikiny(a)- ==
 * [[Ikinyafurikansi]]
 * [[Ikinyankore]]
+* [[Ikinyarumeniya]]
 * [[Ikinyarwanda]]
+* [[Ikinyasiloveniya]]
 * [[Ikinyaturukiya]] → Igiturukiya
+* [[Ikinyendoziya]]
+* [[Ikinyeviyetinamu]]
+* [[Ikinyeyisilandi]]
+* [[Ikinyeyukereniya]]
 
 [[Category:Indimi]]
 [[Category:Kinyarwanda]]
