--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -15,7 +15,10 @@
 * [[Igifaransa]]
 * [[Igifero]]
 * [[Igifilipino]]
+* [[Igifinilande]]
 * [[Igifinuwa]]
+* [[Igifiriziyani]]
+* [[Igihawusa]]
 * [[Igiheburayo]]
 * [[Igihinde]]
 * [[Igiholandi]]
