--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -20,23 +20,45 @@
 * [[Igifiriziyani]]
 * [[Igihawusa]]
 * [[Igiheburayo]]
-* [[Igihinde]]
+* [[Igihinde]] → Igihindi
+* [[Igihindi]]
 * [[Igiholandi]]
 * [[Igihongiriya]]
+* [[Igikambodiya]]
+* [[Igikanada]]
 * [[Igikatala]]
+* [[Igikatalani]]
+* [[Igikazaki]]
+* [[Igikecuwa]]
+* [[Igikerewole cyo mu birwa bya Morisi]]
+* [[Igikerewole cyo muri Haiti]]
 * [[Igikoreya]]
+* [[Igikorisikani]]
 * [[Igikorowasiya]]
 * [[Igikuyu]]
 * [[Igiperisi]]
 * [[Igipolone]]
 * [[Igiporutigali]]
+* [[Igipunjabi]]
 * [[Igiseribe]]
+* [[Igiseribiya]]
+* [[Igishinwa]] (Cyoroheje)
+* [[Igishinwa]] (Gakondo)
+* [[Igishona]]
+* [[Igisilande]]
 * [[Igisilovaki]]
 * [[Igisipanyoli]] → Icyesipanyole
+* [[Igisindi]]
+* [[Igisomali]]
 * [[Igisuweduwa]]
 * [[Igiswahili]]
+* [[Igitajiki]]
 * [[Igitaliyani]]
+* [[Igitamili]]
+* [[Igitata]]
 * [[Igitayi]]
+* [[Igitelugu]]
+* [[Igitonga]]
 * [[Igituruki]] → Igiturukiya
 * [[Igiturukimeni]]
 * [[Igiturukiya]]
