--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -64,21 +64,42 @@
 * [[Igiturukiya]]
 
 == Iki- ==
+* [[Ikibasiki]]
 * [[Ikibelarusiya]]
-* [[Ikidaninwa]]
+* [[Ikibengali]]
+* [[Ikibulugariya]]
 * [[Ikidage]]
+* [[Ikidaninwa]]
+* [[Ikigalisiya]]
+* [[Ikigaluwa]]
+* [[Ikigaluwa cy'Igisweduwa]]
+* [[Ikiganda]]
 * [[Ikigereki]]
 * [[Ikilatini]]
 * [[Ikilativiyani]]
+* [[Ikilawotiyani]]
 * [[Ikilazi]]
 * [[Ikiluba]]
 * [[Ikilituwaniya]]
+* [[Ikimalayalami]]
+* [[Ikimalayi]]
+* [[Ikimaliteze]]
+* [[Ikimarati]]
+* [[Ikimasedoniyani]]
 * [[Ikimokisha]]
+* [[Ikimolidaviyani]]
+* [[Ikimongoli]]
+* [[Ikimonteregro]]
+* [[Ikinepali]]
+* [[Ikinerilande]]
 * [[Ikinoruveji]]
+* [[Ikirilandi]]
 * [[Ikiromaniya]]
 * [[Ikirundi]]
 * [[Ikirusiya]]
+* [[Ikiwiguri]]
 * [[Ikiyapani]]
+* [[Ikiyoruba]]
 
 == Ikiny(a)- ==
 * [[Ikinyafurikansi]]
