--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -102,12 +102,21 @@
 * [[Ikiyoruba]]
 
 == Ikiny(a)- ==
+* [[Ikinyaakani]]
+* [[Ikinyafilipine]]
+* [[Ikinyafurikaneri]] → Ikinyafurikansi
 * [[Ikinyafurikansi]]
+* [[Ikinyahawayi]]
+* [[Ikinyaletoviyani]]
+* [[Ikinyamadagasikari]]
 * [[Ikinyankore]]
+* [[Ikinyarumaniya]]
 * [[Ikinyarumeniya]]
 * [[Ikinyarwanda]]
 * [[Ikinyasiloveniya]]
 * [[Ikinyaturukiya]] → Igiturukiya
+* [[Ikinyaviyetinamu]]
+* [[Ikinyayikereni]]
 * [[Ikinyendoziya]]
 * [[Ikinyeviyetinamu]]
 * [[Ikinyeyisilandi]]
