--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -123,6 +123,23 @@
 * [[Ikinyeyukereniya]]
 
 == Iny(a)- ==
+* [[Inyaguwarani]]
+* [[Inyamuhariki]]
+* [[Inyatigirinya]]
+* [[Inyazeribayijani]]
+* [[Inyebihari]]
+* [[Inyebiritoni]]
+* [[Inyebosiniya]]
+* [[Inyefaroyizi]]
+* [[Inyegujarati]]
+* [[Inyehawusa]]
+* [[Inyejava]]
+* [[Inyejeworujiya]]
+* [[Inyekilingoni]]
+* [[Inyekuridishi]]
+* [[Inyenoruveji]]
+* [[Inyeperisi]]
+* [[Inyeporutigali]] → Igiporutigali
 
 [[Category:Indimi]]
 [[Category:Kinyarwanda]]
