--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -140,6 +140,18 @@
 * [[Inyenoruveji]]
 * [[Inyeperisi]]
 * [[Inyeporutigali]] → Igiporutigali
+* [[Inyeseribiya na Korowasiya]]
+* [[Inyesesoto]]
+* [[Inyesimpaleze]]
+* [[Inyesudani]]
+* [[Inyeturukimeni]]
+* [[Inyetuwi]]
+* [[Inyeyidishi]]
+* [[Inyeyurudu]]
+* [[Inyeyuzubeki]]
+* [[Inyezulu]]
+* [[Inyogusitani]]
+* [[Inyoriya]]
 
 [[Category:Indimi]]
 [[Category:Kinyarwanda]]
