--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -144,7 +144,7 @@
 * [[Inyesesoto]]
 * [[Inyesimpaleze]]
 * [[Inyesudani]]
-* [[Inyeturukimeni]]
+* [[Inyeturukimeni]] → Igiturukimeni
 * [[Inyetuwi]]
 * [[Inyeyidishi]]
 * [[Inyeyurudu]]
