--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -11,6 +11,7 @@
 * [[Icyoriya]]
 
 == Igi- ==
+* [[Igibo]]
 * [[Igiceceni]]
 * [[Igiceke]]
 * [[Igifaransa]]
@@ -20,11 +21,13 @@
 * [[Igifinuwa]]
 * [[Igifiriziyani]]
 * [[Igihawusa]]
+* [[Igiheburayi]]
 * [[Igiheburayo]]
 * [[Igihinde]] → Igihindi
 * [[Igihindi]]
 * [[Igiholandi]]
 * [[Igihongiriya]]
+* [[Igihonguruwa]]
 * [[Igikambodiya]]
 * [[Igikanada]]
 * [[Igikatala]]
@@ -33,30 +36,49 @@
 * [[Igikecuwa]]
 * [[Igikerewole cyo mu birwa bya Morisi]]
 * [[Igikerewole cyo muri Haiti]]
+* [[Igikirigisi]]
+* [[Igikonkani]]
 * [[Igikoreya]]
 * [[Igikorisikani]]
 * [[Igikorowasiya]]
+* [[Igikorowate]]
+* [[Igikumeri]]
 * [[Igikuyu]]
+* [[Igikwecuwa]]
+* [[Igipashitu]]
 * [[Igiperisi]]
+* [[Igiperiza]]
 * [[Igipolone]]
 * [[Igiporutigali]]
 * [[Igipunjabi]]
-* [[Igiseribe]]
+* [[Igiseribe]] (Igisirilike)
+* [[Igiseribe]] (Ikilatini)
 * [[Igiseribiya]]
-* [[Igishinwa]] (Cyoroheje)
+* [[Igisesoto sa Lebowa]]
+* [[Igisetswana]]
+* [[Igishinwa]] (Cya kera)
+* [[Igishinwa]] (Cyoroheje) (Cyorohejwe)
 * [[Igishinwa]] (Gakondo)
+* [[Igishinwa]] (Hongo Kongo)
 * [[Igishona]]
 * [[Igisilande]]
+* [[Igisilovake]]
 * [[Igisilovaki]]
+* [[Igisiloveniya]]
 * [[Igisipanyoli]] → Icyesipanyole
 * [[Igisindi]]
+* [[Igisinihala]]
+* [[Igisiweduwa]]
 * [[Igisomali]]
+* [[Igisoza]]
 * [[Igisuweduwa]]
 * [[Igiswahili]]
 * [[Igitajiki]]
 * [[Igitaliyani]]
 * [[Igitamili]]
+* [[Igitamulu]]
 * [[Igitata]]
+* [[Igitatari]]
 * [[Igitayi]]
 * [[Igitelugu]]
 * [[Igitonga]]
