--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -90,22 +90,33 @@
 * [[Ikibasiki]]
 * [[Ikibelarusiya]]
 * [[Ikibengali]]
+* [[Ikibosiniya]]
+* [[Ikibuligare]]
 * [[Ikibulugariya]]
 * [[Ikidage]]
 * [[Ikidaninwa]]
+* [[Ikidanwa]]
 * [[Ikigalisiya]]
 * [[Ikigaluwa]]
 * [[Ikigaluwa cy'Igisweduwa]]
 * [[Ikiganda]]
 * [[Ikigereki]]
+* [[Ikigujarati]]
+* [[Ikijorujiya]]
 * [[Ikilatini]]
+* [[Ikilativiya]]
 * [[Ikilativiyani]]
+* [[Ikilawo]]
 * [[Ikilawotiyani]]
 * [[Ikilazi]]
-* [[Ikiluba]]
+* [[Ikiligizamburujuwa]]
 * [[Ikilituwaniya]]
+* [[Ikiluba]]
+* [[Ikimacedoniya]]
+* [[Ikimalayakamu]]
 * [[Ikimalayalami]]
 * [[Ikimalayi]]
+* [[Ikimalite]]
 * [[Ikimaliteze]]
 * [[Ikimarati]]
 * [[Ikimasedoniyani]]
@@ -113,8 +124,11 @@
 * [[Ikimolidaviyani]]
 * [[Ikimongoli]]
 * [[Ikimonteregro]]
+* [[Ikimuharike]]
 * [[Ikinepali]]
 * [[Ikinerilande]]
+* [[Ikinoruveje]] (Bokumali)
+* [[Ikinoruveje]] (Nyonorisiki)
 * [[Ikinoruveji]]
 * [[Ikirilandi]]
 * [[Ikiromaniya]]
