--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -132,11 +132,16 @@
 * [[Ikinoruveji]]
 * [[Ikirilandi]]
 * [[Ikiromaniya]]
+* [[Ikiromanshe]]
 * [[Ikirundi]]
 * [[Ikirusiya]]
+* [[Ikiviyetinamu]]
 * [[Ikiwiguri]]
+* [[Ikiworufu]]
+* [[Ikiwurudu]]
 * [[Ikiyapani]]
 * [[Ikiyoruba]]
+* [[Ikizuru]]
 
 == Ikiny(a)- ==
 * [[Ikinyaakani]]
