--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -155,14 +155,20 @@
 * [[Ikinyarumaniya]]
 * [[Ikinyarumeniya]]
 * [[Ikinyarwanda]]
+* [[Ikinyasame]]
 * [[Ikinyasiloveniya]]
 * [[Ikinyaturukiya]] → Igiturukiya
 * [[Ikinyaviyetinamu]]
 * [[Ikinyayikereni]]
+* [[Ikinyayirilande]]
+* [[Ikinyayukereni]]
+* [[Ikinyazeri]] 
 * [[Ikinyendoziya]]
 * [[Ikinyeviyetinamu]]
+* [[Ikinyewuzubeki]]
 * [[Ikinyeyisilandi]]
 * [[Ikinyeyukereniya]]
+* [[Ikinyinukitituti]]
 
 == Iny(a)- ==
 * [[Inyaguwarani]]
