--- a/Masedoniya_ya_Ruguru.mw
+++ b/Masedoniya_ya_Ruguru.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Macedonia.svg|thumb|250px|<font color="grey">Ibendera rya Masedoniya</font>]]
 [[File:Europe-Macedonia.svg|thumb|250px|<font color="grey">Ikarita ya Masedoniya</font>]]
 
-'''Masedoniya''' (izina mu [[kinyamacedoniya]] : ''Република Македонија'' ) n’[[igihugu]] mu [[Burayi]].
+'''Masedoniya''' cyangwa '''Icyahoze ari Repubulika ya Yugosilave ya Masedoniya''' (izina mu [[kinyamacedoniya]] : ''Република Македонија'' ) n’[[igihugu]] mu [[Burayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
