*Empty MediaWiki Message*

--- a/Malesiya.mw
+++ b/Malesiya.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Malaysia.svg|thumb|250px|<font color="grey">Ibendera rya Malesiya</font>]]
 [[File:Location Malaysia ASEAN.svg|thumb|250px|<font color="grey">Ikarita ya Malesiya</font>]]
 
-'''Malesiya''' (izina mu [[kimalayi]] : ''Malaysia'' ) n’[[igihugu]] muri [[Aziya]].
+'''Malesiya''' cyangwa '''Maleziya''' (izina mu [[kimalayi]] : ''Malaysia'' ) n’[[igihugu]] muri [[Aziya]].
 
 [[Category:Aziya]]
 [[Category:Ibihugu]]
