*Empty MediaWiki Message*

--- a/Buruneyi.mw
+++ b/Buruneyi.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Brunei.svg|thumb|250px|<font color="grey">Ibendera rya Buruneyi</font>]]
 [[File:Location Brunei ASEAN.svg|thumb|250px|<font color="grey">Ikarita ya Buruneyi</font>]]
 
-'''Buruneyi''' (izina mu [[kimalayi]] : ''Negara Brunei Darussalam'' ; izina mu [[kijavani]] : '''بروني دارالسلام''' ) n’[[igihugu]] muri [[Aziya]].
+'''Buruneyi''' cyangwa '''Buruneyi Darusalamu''' (izina mu [[kimalayi]] : ''Negara Brunei Darussalam'' ; izina mu [[kijavani]] : '''بروني دارالسلام''' ) n’[[igihugu]] muri [[Aziya]].
 
 [[Category:Aziya]]
 [[Category:Ibihugu]]
