--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -7,11 +7,31 @@
 * [[Icyafurikanzi]] → Ikinyafurikansi
 * [[Icyalubaniya]]
 * [[Icyarabu]]
+* [[Icyaragoneze]]
+* [[Icyarapaho]]
+* [[Icyarawaka]]
+* [[Icyarumeniya]]
+* [[Icyelamite]]
 * [[Icyesipanyole]]
 * [[Icyesiperanto]]
 * [[Icyesitoniya]]
+* [[Icyewe]]
+* [[Icyewendo]]
+* [[Icyogisitani]]  (nyuma 1500)
+* [[Icyojibwa]]
 * [[Icyongereza]]
+* [[Icyongereza, Gishaje]] (ca.450-1100)
+* [[Icyongereza, Hagati (1100-1500)
 * [[Icyoriya]]
+* [[Icyoromo]]
+* [[Icyoseje]]
+* [[Icyosetiyani]]
+* [[Icyudimuriti]]
+* [[Icyugaritike]]
+* [[Icyumbundu]]
+* [[Icyuridu]]
+* [[Icyuyiguru]]
+* [[Icyuzubeka]]
 
 == Igi- ==
 * [[Igibo]]
