--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -21,7 +21,7 @@
 * [[Icyojibwa]]
 * [[Icyongereza]]
 * [[Icyongereza, Gishaje]] (ca.450-1100)
-* [[Icyongereza, Hagati (1100-1500)
+* [[Icyongereza, Hagati]] (1100-1500)
 * [[Icyoriya]]
 * [[Icyoromo]]
 * [[Icyoseje]]
