--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -35,79 +35,187 @@
 
 == Igi- ==
 * [[Igibo]]
+* [[Igicagatayi]]
+* [[Igicakara]]  (Antapasikani)
 * [[Igiceceni]]
 * [[Igiceke]]
+* [[Igicewa]]
+* [[Igicicewa]] → Igicewa
+* [[Igiceyene]]
+* [[Igicibusha]]
+* [[Igicokitawu]]
+* [[Igicuki]]
+* [[Igicuvashi]]
+* [[Igicuwange]]
+* [[Igifangi]]
+* [[Igifanti]]
 * [[Igifaransa]]
+* [[Igifaransa, Gishaje]] (842-ca.1400)
+* [[Igifaransa, Hagati]] (ca.1400-1600)
 * [[Igifero]]
+* [[Igifijiyani]]
 * [[Igifilipino]]
 * [[Igifinilande]]
 * [[Igifinuwa]]
 * [[Igifiriziyani]]
+* [[Igifoni]]
+* [[Igifurahe]]
+* [[Igifuriyuliyani]]
+* [[Igifuriyuliyani]]
+* [[Igifuriziyani]]
+* [[Igifuriziyani]]
+* [[Igihawusa]]
+* [[Igihayida]]
 * [[Igihawusa]]
 * [[Igiheburayi]]
 * [[Igiheburayo]]
-* [[Igihinde]] → Igihindi
+* [[Igiherero]]
+* [[Igihiligayino]]
+* [[Igihimacali]]
+* [[Igihinde]] 
+* [[Igihinde cy'Amerika y'Amajyaruguru]]
+* [[Igihinde cy'Amerika yo Hagati]]
 * [[Igihindi]]
+* [[Igihiri]]
 * [[Igiholandi]]
 * [[Igihongiriya]]
 * [[Igihonguruwa]]
+* [[Igihupa]]
+* [[Igikabaridiyani]]
+* [[Igikalumike]]
+* [[Igikamba]]
 * [[Igikambodiya]]
 * [[Igikanada]]
+* [[Igikanuri]]
+* [[Igikaracayi-bali]]
+* [[Igikarakalupake]]
+* [[Igikareni]]
+* [[Igikashimiri]]
 * [[Igikatala]]
 * [[Igikatalani]]
+* [[Igikawi]]
 * [[Igikazaki]]
+* [[Igikazi]]
 * [[Igikecuwa]]
 * [[Igikerewole cyo mu birwa bya Morisi]]
 * [[Igikerewole cyo muri Haiti]]
+* [[Igikilingoni]]
+* [[Igikipele]]
+* [[Igikiri]]
 * [[Igikirigisi]]
+* [[Igikirike]]
+* [[Igikomi]]
 * [[Igikonkani]]
+* [[Igikopute]]
 * [[Igikoreya]]
 * [[Igikorisikani]]
 * [[Igikorowasiya]]
 * [[Igikorowate]]
+* [[Igikorunishe]]
+* [[Igikoruse]]
+* [[Igikosiriyani]]
+* [[Igikotani]]
 * [[Igikumeri]]
+* [[Igikumiki]]
+* [[Igikurudishi]]
+* [[Igikuruki]]
+* [[Igikutenayi]]
 * [[Igikuyu]]
+* [[Igikwanyama]]
 * [[Igikwecuwa]]
+* [[Igipahilavi]]
+* [[Igipalawani]]
+* [[Igipali]]
+* [[Igipangasinani]]
+* [[Igipanjabi]]
+* [[Igipapiyamento]]
 * [[Igipashitu]]
 * [[Igiperisi]]
 * [[Igiperiza]]
+* [[Igipohinipeyini]]
 * [[Igipolone]]
+* [[Igiporovensali, Gishaje]] (ku 1500)
 * [[Igiporutigali]]
 * [[Igipunjabi]]
+* [[Igipushito]]
+* [[Igisamaritani]]
+* [[Igisami amajyaruguru]]
+* [[Igisami Amajyepfo]]
+* [[Igisamowani]]
+* [[Igisango]]
+* [[Igisanidawe]]
+* [[Igisansikiriti]]
+* [[Igisasaki]]
+* [[Igisebuwano]]
+* [[Igiselikupe]]
+* [[Igisentali]]
+* [[Igisera]]
 * [[Igiseribe]] (Igisirilike)
 * [[Igiseribe]] (Ikilatini)
 * [[Igiseribiya]]
 * [[Igisesoto sa Lebowa]]
 * [[Igisetswana]]
+* [[Igishamoro]]
+* [[Igishani]]
+* [[Igisheroki]]
 * [[Igishinwa]] (Cya kera)
 * [[Igishinwa]] (Cyoroheje) (Cyorohejwe)
 * [[Igishinwa]] (Gakondo)
 * [[Igishinwa]] (Hongo Kongo)
 * [[Igishona]]
+* [[Igisicuwanayi]]
+* [[Igisidamo]]
+* [[Igisikisika]]
+* [[Igisikoluti-sami]]
 * [[Igisilande]]
 * [[Igisilovake]]
 * [[Igisilovaki]]
 * [[Igisiloveniya]]
+* [[Igisindi]]
 * [[Igisipanyoli]] → Icyesipanyole
 * [[Igisindi]]
 * [[Igisinihala]]
 * [[Igisiweduwa]]
+* [[Igisogidiyani]]
 * [[Igisomali]]
+* [[Igisonenki]]
+* [[Igisorubiyani cyo hasi]]
+* [[Igisotho, Amajyepfo]]
 * [[Igisoza]]
+* [[Igisukuma]]
+* [[Igisusu]]
 * [[Igisuweduwa]]
 * [[Igiswahili]]
+* [[Igiswati]]
+* [[Igiswayili]]
+* [[Igitagaloge]]
+* [[Igitajika]]
 * [[Igitajiki]]
 * [[Igitaliyani]]
+* [[Igitamasheke]]
 * [[Igitamili]]
 * [[Igitamulu]]
 * [[Igitata]]
 * [[Igitatari]]
 * [[Igitayi]]
 * [[Igitelugu]]
-* [[Igitonga]]
+* [[Igitereno]]
+* [[Igitetumu]]
+* [[Igitigirinya]]
+* [[Igitivu]]
+* [[Igitokelawu]]
+* [[Igitokipisini]]
+* [[Igitonga]] (Ibirwa bya Tonga)
+* [[Igitonga]] (Nyansa)
+* [[Igitsimushiyani]]
+* [[Igitsonga]]
+* [[Igitswana]]
+* [[Igitumbuka]]
 * [[Igituruki]] → Igiturukiya
 * [[Igiturukimeni]]
 * [[Igiturukiya]]
+* [[Igituvalu]]
+* [[Igitwi]]
 
 == Iki- ==
 * [[Ikibasiki]]
