--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -221,38 +221,100 @@
 * [[Iginyakanada]]
 
 == Iki- ==
-* [[Ikibasiki]]
+* [[Ikibagini]]
+* [[Ikibalineze]]
+* [[Ikibalushi]]
+* [[Ikibambara]]
+* [[Ikibani]]
+* [[Ikibarumi]]
+* [[Ikibasa]]
+* [[Ikibasike]]
 * [[Ikibelarusiya]]
+* [[Ikibemba]]
 * [[Ikibengali]]
-* [[Ikibosiniya]]
+* [[Ikibihari]]
+* [[Ikibini]]
+* [[Ikibirini]]
+* [[Ikibisilamu]]
+* [[Ikibojipuri]]
 * [[Ikibuligare]]
 * [[Ikibulugariya]]
+* [[Ikibulini]]
+* [[Ikiburaji]]
+* [[Ikiburiyati]]
 * [[Ikidage]]
+* [[Ikidage, Gishaje Hejuru]] (ca.750-1050)
+* [[Ikidage, Hagati Hejuru]] (ca.1050-1500)
+* [[Ikidakota]]
 * [[Ikidaninwa]]
 * [[Ikidanwa]]
+* [[Ikidarugwa]]
+* [[Ikidinka]]
+* [[Ikido]]
+* [[Ikidogiri]]
+* [[Ikigalegani]]
+* [[Ikigalike]] 
 * [[Ikigalisiya]]
 * [[Ikigaluwa]]
 * [[Ikigaluwa cy'Igisweduwa]]
 * [[Ikiganda]]
+* [[Ikigerebo]]
 * [[Ikigereki]]
+* [[Ikigereki, Cya kera]] (ku 1453)
+* [[Ikigereki, Gishya]] (1453-)
+* [[Ikigibo]]
+* [[Ikigisosa]]
+* [[Ikigondi]]
+* [[Ikigorontalo]]
+* [[Ikigubaya]]
 * [[Ikigujarati]]
+* [[Ikigwarani]]
+* [[Ikijavani]]
 * [[Ikijorujiya]]
+* [[Ikikabile]]
+* [[Ikikashubiyani]]
+* [[Ikikuyu]]
+* [[Ikiladino]]
+* [[Ikilahinda]]
+* [[Ikilamba]]
 * [[Ikilatini]]
 * [[Ikilativiya]]
 * [[Ikilativiyani]]
 * [[Ikilawo]]
 * [[Ikilawotiyani]]
 * [[Ikilazi]]
+* [[Ikileziyani]]
 * [[Ikiligizamburujuwa]]
 * [[Ikilituwaniya]]
+* [[Ikilojibani]]
+* [[Ikiloko]]
+* [[Ikilozi]]
 * [[Ikiluba]]
+* [[Ikiluba-Katanga]]
+* [[Ikiluba-Lulwa]]
+* [[Ikilule-sami]]
+* [[Ikilunda]]
+* [[Ikiluwo]] (Kenya na Tanzaniya)
+* [[Ikilwizeno]]
 * [[Ikimacedoniya]]
+* [[Ikimagahi]]
+* [[Ikimakasari]]
 * [[Ikimalayakamu]]
 * [[Ikimalayalami]]
+* [[Ikimalayalamu]]
 * [[Ikimalayi]]
 * [[Ikimalite]]
 * [[Ikimaliteze]]
+* [[Ikimancu]]
+* [[Ikimandari]]
+* [[Ikimandingo]]
+* [[Ikimangisi]]
+* [[Ikimaragasi]]
 * [[Ikimarati]]
+* [[Ikimari]]
+* [[Ikimarishali]]
+* [[Ikimarwari]]
+* [[Ikimasayi]]
 * [[Ikimasedoniyani]]
 * [[Ikimokisha]]
 * [[Ikimolidaviyani]]
