--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -316,27 +316,78 @@
 * [[Ikimarwari]]
 * [[Ikimasayi]]
 * [[Ikimasedoniyani]]
+* [[Ikimawori]]
+* [[Ikimayitili]]
+* [[Ikimbundu]]
+* [[Ikimeduri]]
+* [[Ikimeduri]]
+* [[Ikimende]]
+* [[Ikiminangikabawu]]
+* [[Ikimohawuki]]
 * [[Ikimokisha]]
 * [[Ikimolidaviyani]]
+* [[Ikimongo]]
 * [[Ikimongoli]]
 * [[Ikimonteregro]]
+* [[Ikimosi]]
 * [[Ikimuharike]]
+* [[Ikinarisami]]
+* [[Ikinavaho]]
+* [[Ikinawuru]]
+* [[Ikindebele, Amajyaruguru]]
+* [[Ikindebele, Amajyepfo]]
+* [[Ikindonga]]
 * [[Ikinepali]]
 * [[Ikinerilande]]
+* [[Ikinewari Gisanzwe]] 
+* [[Ikinewari Gishaje]]
+* [[Ikinewopolita]]
+* [[Ikingushi]]
+* [[Ikiniyasi]]
+* [[Ikiniyuweni]]
+* [[Ikinogayi]]
+* [[Ikinorusi, Gishaje]]
 * [[Ikinoruveje]] (Bokumali)
 * [[Ikinoruveje]] (Nyonorisiki)
 * [[Ikinoruveji]]
+* [[Ikinyanja]] → Igicewa
+* [[Ikinyoro]]
+* [[Ikinzima]]
+* [[Ikirajasitani]]
+* [[Ikirapanuyi]]
+* [[Ikirigizi]]
 * [[Ikirilandi]]
+* [[Ikiromani]]
 * [[Ikiromaniya]]
 * [[Ikiromanshe]]
+* [[Ikiromanshi]]
+* [[Ikiromansi]]
 * [[Ikirundi]]
+* [[Ikirushayi]]
 * [[Ikirusiya]]
+* [[Ikivayi]]
+* [[Ikivenda]]
 * [[Ikiviyetinamu]]
+* [[Ikivolapuke]]
+* [[Ikivotika]]
+* [[Ikiwaluni]]
+* [[Ikiwarayi]]
+* [[Ikiwasho]]
+* [[Ikiwelishi]]
 * [[Ikiwiguri]]
+* [[Ikiwolofu]]
 * [[Ikiworufu]]
 * [[Ikiwurudu]]
+* [[Ikiyakuti]]
 * [[Ikiyapani]]
+* [[Ikiyapi]]
+* [[Ikiyawo]]
+* [[Ikiyidishi]]
 * [[Ikiyoruba]]
+* [[Ikizapoteke]]
+* [[Ikizenega]]
+* [[Ikizulu]]
+* [[Ikizuni]]
 * [[Ikizuru]]
 
 == Ikiny(a)- ==
