--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -99,6 +99,7 @@
 * [[Igikecuwa]]
 * [[Igikerewole cyo mu birwa bya Morisi]]
 * [[Igikerewole cyo muri Haiti]]
+* [[Igikerewole nyahayiti]]
 * [[Igikilingoni]]
 * [[Igikipele]]
 * [[Igikiri]]
