--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -392,31 +392,131 @@
 * [[Ikizuru]]
 
 == Ikiny(a)- ==
+* [[Ikinukititutu]]
+* [[Ikinupiyake]]
 * [[Ikinyaakani]]
+* [[Ikinyabashikiri]]
+* [[Ikinyabashinwa]]
+* [[Ikinyabikoli]]
+* [[Ikinyabosiniya]]
+* [[Ikinyabulugariya]]
+* [[Ikinyabureto]]
+* [[Ikinyaceke]]
+* [[Ikinyadangume]]
+* [[Ikinyadelaweya]]
+* [[Ikinyadogiribu]]
+* [[Ikinyadugeyi]]
+* [[Ikinyaduwala]]
+* [[Ikinyaduyula]]
+* [[Ikinyafari]]
 * [[Ikinyafilipine]]
+* [[Ikinyafinilande]]
+* [[Ikinyafowenisiyani]]
+* [[Ikinyafurihili]]
 * [[Ikinyafurikaneri]] → Ikinyafurikansi
 * [[Ikinyafurikansi]]
+* [[Ikinyaga]]
+* [[Ikinyagayo]]
+* [[Ikinyageworugiya]]
+* [[Ikinyagiliberiti]]
+* [[Ikinyagotike]]
+* [[Ikinyagwishini]]
+* [[Ikinyagwizi]]
+* [[Ikinyahangariya]]
 * [[Ikinyahawayi]]
+* [[Ikinyahayiti]] 
+* [[Ikinyahimonge]]
+* [[Ikinyahitite]]
+* [[Ikinyaholande, Hagati]] (ca. 1050-1350)
+* [[Ikinya-ikarayini]]
+* [[Ikinya-ikarayini]] 
+* [[Ikinyajudewo-nyaperisi]]
+* [[Ikinyajudewo-nyarabu]]
+* [[Ikinyakadiyani]]
+* [[Ikinyakado]]
+* [[Ikinyakani]]
+* [[Ikinyakani]] 
+* [[Ikinyakoli]]
+* [[Ikinyakongo]]
+* [[Ikinyakorowasi]]
 * [[Ikinyaletoviyani]]
+* [[Ikinyalitwani]]
+* [[Ikinyalubaniya]]
+* [[Ikinyalugizamburu]]
+* [[Ikinyamacedoniya]]
 * [[Ikinyamadagasikari]]
+* [[Ikinyamalite]]
+* [[Ikinyamarike]]
+* [[Ikinyamisiri]] (Cya kera)
+* [[Ikinyamoludavi]]
+* [[Ikinyamongoliya]]
+* [[Ikinyanepale]] 
+* [[Ikinyankole]]
 * [[Ikinyankore]]
+* [[Ikinyanoruveji]]
+* [[Ikinyanoruveji nayinorusiki]]
+* [[Ikinyaperisi]]
+* [[Ikinyaperisi, Gishaje]] (ca.600-400 B.C.)
+* [[Ikinyapolonye]]
 * [[Ikinyarumaniya]]
 * [[Ikinyarumeniya]]
 * [[Ikinyarwanda]]
 * [[Ikinyasame]]
+* [[Ikinyasamese]]
+* [[Ikinyasaridini]] 
+* [[Ikinyaseribiya]]
+* [[Ikinyasikoti]]
+* [[Ikinyasikotilande]] 
 * [[Ikinyasiloveniya]]
+* [[Ikinyasinali]] 
+* [[Ikinyasiriya]]
+* [[Ikinyasorubiya cyo hejuru]]
+* [[Ikinyasumeri]]
+* [[Ikinyasundani]]
+* [[Ikinyasuwede]]
+* [[Ikinyatahiti]]
+* [[Ikinyatibeti]]
+* [[Ikinyatigire]]
+* [[Ikinyatilingiliti]]
+* [[Ikinyatimine]]
 * [[Ikinyaturukiya]] → Igiturukiya
+* [[Ikinyaturukiya, Otomani]] (1500-1928)
+* [[Ikinyatuvini]]
+* [[Ikinyavarika]]
+* [[Ikinyavesitani]]
 * [[Ikinyaviyetinamu]]
+* [[Ikinyawadi]] 
 * [[Ikinyayikereni]]
+* [[Ikinyayimara]]
 * [[Ikinyayirilande]]
 * [[Ikinyayukereni]]
 * [[Ikinyazeri]] 
+* [[Ikinyazeribayijani]]
+* [[Ikinyazongika]]
+* [[Ikinyefike]]
+* [[Ikinyekajuke]]
+* [[Ikinyendonisiya]]
 * [[Ikinyendoziya]]
+* [[Ikinyenterilinge]]
+* [[Ikinyeriza]]
 * [[Ikinyeviyetinamu]]
 * [[Ikinyewuzubeki]]
 * [[Ikinyeyisilandi]]
 * [[Ikinyeyukereniya]]
 * [[Ikinyinukitituti]]
+* [[Ikinyirilande]]
+* [[Ikinyirilande, Gishaje]] (ku 900)
+* [[Ikinyirilande, Hagati]] (900-1200)
+* [[Ikinyisilande]]
+
+== ==
+* [[Ikomoni-kimeri]]
+* [[Ilingala]]
+* [[Kirimini nyatatari]]
+* [[Kirimini nyaturukiya]]
+* [[Mikimaki]] 
+* [[Nyamwezi]]
+* [[Urugobeko rwa Cinuki]]
 
 == Iny(a)- ==
 * [[Inyaguwarani]]
