--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -32,10 +32,14 @@ Ikinyaturukiya kigizwe n’inyuguti 29 : a b c ç d e f g ğ h ı i j k l m n o 
 ** '''kız''' – '''kızlar''' umukobwa – abakobwa 
 ** '''oğlan''' – '''oğlanlar''' umuhungu – abahungu 
 ** '''çocuk''' – '''çocuklar''' umwana – abwana
+** '''kol''' – '''kollar''' ukuboko – amaboko 
 
 * e / i / ö / ü → -'''ler''' :
 ** '''erkek''' – '''erkekler''' umugabo – abagabo 
+** '''bebek''' – '''bebekler''' uruhinja – impinja 
+** '''el''' – '''eller''' ikiganza – ibiganza 
 ** '''ev''' – '''evler''' inzu – amazu
+** '''diş''' – '''dişler''' iryinyo – amenyo
 
 == Amagambo n'interuro mu gituruki ==
 
