/* Amagambo n'interuro mu gituruki */

--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -52,6 +52,7 @@ Ikinyaturukiya kigizwe n’inyuguti 29 : a b c ç d e f g ğ h ı i j k l m n o 
 * '''Biraz Ruandaca konuşabiliyorum''' – Kinyarwanda cyanje n'igikye
 * '''Bilmiyorum''' – Simbizi
 * '''Biliyorum''' – Ndabizi
+* '''Türkçe kitap''' – Igitabo mu gituruki
 
 * '''Evet''' – Yego
 * '''Hayır''' – Oya
