--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -60,6 +60,7 @@
 == I ==
 * '''ICT''' Ikoranabuhanga mu itumanaho no gutanga amakuru
 * '''ICT''' [[Ikoranabuhanga mu Isakazamakuru n'Itangazabumenyi]]
+* '''ICTR''' [[Urukiko Nshinjabyaha Mpuzamahanga rwagenewe u Rwanda]] (''International Criminal Tribunal for Rwanda'')
 * '''ICTSD''' [[Ikigo Mpuzamahanga Gishinzwe Ubucuruzi n’Amajyambere Arambye]] (''International Centre for Trade and Sustainable Development'')
 * '''IDA''' [[Ikigega Mpuzamahanga Gitsura Amajyambere]]
 * '''IFG''' [[Forumu Mpuzamahanga ku Ikomatanyabukungu]] (''International Forum on Globalisation'')
