--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -146,6 +146,7 @@
 * '''SME/SMI''' Ibigo n’Inganda nto n’iziciriritse
 
 == T ==
+* '''TPIR''' [[Urukiko Nshinjabyaha Mpuzamahanga rwagenewe u Rwanda]] (''Tribunal pénal international pour le Rwanda'')
 * '''TRAC''' [[Ikigo Gishinzwe Kuvura no Gukora Ubushakashatsi kuri SIDA]] (''Treatment and Research AIDS Center'' )
 
 == U ==
