*Empty MediaWiki Message*

--- a/Umusozi.mw
+++ b/Umusozi.mw
@@ -1,5 +1,29 @@
-[[File:Liskamm 01.jpg|thumb|Umusozi]]
+[[File:Karisimbi2.jpg|thumb|250px|<font color="grey">Umusozi wa Karisimbi </font>]]
+
 '''Umusozi'''
+
+== ==
+*[[Umusozi wa Gitwa]]
+*[[Umusozi wa Kabatwa]]
+*[[Umusozi wa Karisimbi]]
+*[[Umusozi wa Matiritiri]]
+*[[Umusozi wa Munagana]]
+*[[Umusozi wa Murambi]]
+*[[Umusozi wa Nyabihu]]
+*[[Umusozi wa Ruheru]]
+*[[Umusozi wa Ryamondi]
+*[[Umusozi wa Rebero]] (1809m)
+*[[Umusozi wa Kigali]] 
+*[[Umusozi wa Rebero]] (1809m)
+*[[Umusozi wa Kigali]] (1856m)
+*[[Umusozi wa Jali]] (2042m) 
+*[[Umusozi wa Shyorongi]] (1737 m)
+
+== ==
+*[[Umusozi wa Sinayi]]
+*[[Umusozi wa Siyoni ]]
+
+[[Category:Imisozi]]
 
 [[af:Berg]]
 [[an:Montanya]]
