--- a/Umusozi.mw
+++ b/Umusozi.mw
@@ -11,7 +11,7 @@
 *[[Umusozi wa Murambi]]
 *[[Umusozi wa Nyabihu]]
 *[[Umusozi wa Ruheru]]
-*[[Umusozi wa Ryamondi]
+*[[Umusozi wa Ryamondi]]
 *[[Umusozi wa Rebero]] (1809m)
 *[[Umusozi wa Kigali]] 
 *[[Umusozi wa Rebero]] (1809m)
