--- a/Umusozi.mw
+++ b/Umusozi.mw
@@ -20,7 +20,7 @@
 *[[Umusozi wa Shyorongi]] (1737 m)
 
 == ==
-*[[Umusozi wa Ararati]]
+*[[Imisozi ya Ararati]] cyangwa [[Umusozi wa Ararati]]
 *[[Umusozi wa Arafat]]
 *[[Umusozi wa Sinayi]]
 *[[Umusozi wa Siyoni ]]
