--- a/Umusozi.mw
+++ b/Umusozi.mw
@@ -1,4 +1,5 @@
 [[File:Karisimbi2.jpg|thumb|250px|<font color="grey">Umusozi wa Karisimbi </font>]]
+[[File:Suburb of Kigali with Mt Kigali in the background.jpg|thumb|250px|<font color="grey">Umusozi wa Kigali</font>]]
 
 '''Umusozi'''
 
