--- a/Umusozi.mw
+++ b/Umusozi.mw
@@ -21,7 +21,7 @@
 *[[Umusozi wa Shyorongi]] (1737 m)
 
 == ==
-*[[Imisozi ya Ararati]] cyangwa [[Umusozi wa Ararati]]
+*[[Imisozi ya Ararati]] cyangwa [[Umusozi wa Ararati]] (5165m)
 *[[Umusozi wa Arafat]]
 *[[Umusozi wa Sinayi]]
 *[[Umusozi wa Siyoni ]]
