*Empty MediaWiki Message*

--- a/Umusozi.mw
+++ b/Umusozi.mw
@@ -5,6 +5,7 @@
 
 == ==
 *[[Umusozi wa Gitwa]]
+*[[Umusozi wa Huye]]
 *[[Umusozi wa Kabatwa]]
 *[[Umusozi wa Karisimbi]]
 *[[Umusozi wa Matiritiri]]
