--- a/Akarere_ka_Huye.mw
+++ b/Akarere_ka_Huye.mw
@@ -4,6 +4,9 @@
 
 Iyi gahunda yateguwe hashingiye ku bibazo byihariye bigaragara mu Karere ka Huye. Ibindi byashingiweho mu gutegura iyi mihigo ni Imihigo y’Umuryango n’Umudugudu, iy’Utugari n’Imirenge. 
 
+Akarere ka Huye kazwi na none kuba gafite inzu ndangamuco y'u Rwanda.
+Ni mukarere ka Huye kandi dusanga amahoteri menshi mugace kahoze kitwa Butare.
+
 == Imiterere y’Akarere ka Gakenke ==
 :Ubuso bw’Akarere: 581.5 km² 
 :Umubare w’imirenge: 14
