*Empty MediaWiki Message*

--- a/Umusozi_wa_Huye.mw
+++ b/Umusozi_wa_Huye.mw
@@ -2,7 +2,7 @@
 
 '''Umusozi wa Huye'''
 
-Mu [[karere ka Huye]] hari Umusozi wa Huye uzwi cyane, ugaragara aho uhagaze hose mu karere, Muri uwo musozi tuhasanga n’isoko y’amazi afutse azwi mu [[Rwanda]] hose. Ayo mazi hari uruganda rwiyemeje kuyashyira mu macupa hanyuma rukayageza ku ba nyarwanda hirya no hino mu gihugu.
+Mu [[Akarere ka Huye|karere ka Huye]] hari Umusozi wa Huye uzwi cyane, ugaragara aho uhagaze hose mu karere, Muri uwo musozi tuhasanga n’isoko y’amazi afutse azwi mu [[Rwanda]] hose. Ayo mazi hari uruganda rwiyemeje kuyashyira mu macupa hanyuma rukayageza ku ba nyarwanda hirya no hino mu gihugu.
 
 [[Category:Imisozi y’u Rwanda]]
 
