--- a/Icyabukaziyani.mw
+++ b/Icyabukaziyani.mw
@@ -7,10 +7,10 @@
 *'''аҧсыӡ''' &ndash; '''аҧсыӡқәа''' ifi &ndash; amafi
 *'''aжьа''' &ndash; '''aжьақәа''' urukwavu &ndash; inkwavu 
  
-== Alfabeti y’Abukaziyani==
+== Alfabeti y’Icyabukaziyani==
 
 {| class="wikitable"
-|+ Alfabeti y’Abukaziyani
+|+ Alfabeti y’Icyabukaziyani
 |-----
 ! 
 ! 
