*Empty MediaWiki Message*

--- a/Icyalubaniya.mw
+++ b/Icyalubaniya.mw
@@ -1,6 +1,6 @@
 [[File:Albanian language map.jpg|thumb|250px|<font color="grey">Ikarita y’Icyalubaniya</font>]]
 
-'''Icyalubaniya''' (izina mu cyalubaniya : ''Shqip''  cyangwa ''gjuha shqipe'' ) ni [[ururimi]] rwa [[Alubaniya]] na [[Kosovo]].
+'''Icyalubaniya''' cyangwa '''Ikinyalubaniya''' (izina mu cyalubaniya : ''Shqip''  cyangwa ''gjuha shqipe'' ) ni [[ururimi]] rwa [[Alubaniya]] na [[Kosovo]].
 
 [[Category:Indimi z’igihinde-buraya]]
 
