--- a/Icyalubaniya.mw
+++ b/Icyalubaniya.mw
@@ -2,6 +2,12 @@
 
 '''Icyalubaniya''' cyangwa '''Ikinyalubaniya''' (izina mu cyalubaniya : ''Shqip''  cyangwa ''gjuha shqipe'' ) ni [[ururimi]] rwa [[Alubaniya]] na [[Kosovo]].
 
+== Alfabeti y’ikinyaturukiya ==
+Ikinyaturukiya kigizwe n’inyuguti 36 : a b c ç d dh e ë f g gj h i j k l ll m n nj o p q r rr s sh t th u v x xh y z zh
+:inyajwi 6 : a e ë i o u 
+:indagi 30 : b c ç d dh f g gj h j k l ll m n nj p q r rr s sh t th v x xh y z zh
+
+
 [[Category:Indimi z’igihinde-buraya]]
 
 [[af:Albanees]]
